# Protocol

./: CMakeLists.txt
.github/workflows/: build.yml
benchmarks/: message_benchmark.cc  request_benchmark.cc
cmake/: engine-protocolConfig.cmake
include/engine/: protocol.hpp
include/engine/protocol/: message.hpp  request.hpp
include/engine/protocol/detail/: message_data.hpp
scripts/: setup_env.sh
tests/: message_test.cc  request_test.cc
